Added sort ads by date and distance
