# controllers/ad.go
@@ -19,6 +19,15 @@ import (
 	"gorm.io/gorm"
 )
 
+type ReadAd struct {
+	models.Advertisement
+	SubcategoryID   uint           `json:"subcategory_id"`
+	SubcategoryName string         `json:"subcategory_name"`
+	CategoryName    string         `json:"category_name"`
+	LocationText    string         `json:"location"`
+	Pictures        pq.StringArray `gorm:"column:pictures" json:"pictures"`
+}
+
 // GetAllAds godoc
 // @Summary Get all ads
 // @Description Retrieves a list of all advertisements with detailed information
@@ -29,14 +38,7 @@ import (
 // @Failure 500 {object} nil "Internal Server Error"
 // @Router /ads [get]
 func GetAllAds(w http.ResponseWriter, r *http.Request) {
-	var result []struct {
-		models.Advertisement
-		SubcategoryID   uint           `json:"subcategory_id"`
-		SubcategoryName string         `json:"subcategory_name"`
-		CategoryName    string         `json:"category_name"`
-		LocationText    string         `json:"location"`
-		Pictures        pq.StringArray `gorm:"column:pictures" json:"pictures"`
-	}
+	var result []ReadAd
 
 	err := models.DB.Raw(`
 	       SELECT
@@ -49,6 +51,234 @@ func GetAllAds(w http.ResponseWriter, r *http.Request) {
 	       JOIN subcategories ON subcategories.id = advertisements.subcategory_id
 	       JOIN categories ON categories.id = subcategories.category_id
 	    `).
+		Scan(&result).Error
+
+	if err != nil {
+		log.Printf("Request error: %v", err)
+		utils.RespondWithError(w, http.StatusInternalServerError, "Internal Server Error")
+		return
+	}
+
+	type user_result struct {
+		models.User
+		LocationText string `json:"location"`
+	}
+	var json_users []user_result
+
+	err = models.DB.Raw(`
+	    SELECT *, ST_AsGeoJSON(users.location::geometry) AS location_text
+	    FROM users`).
+		Scan(&json_users).Error
+
+	if err != nil {
+		log.Printf("Request error: %v", err)
+		utils.RespondWithError(w, http.StatusInternalServerError, "Internal Server Error")
+		return
+	}
+
+	users := make([]models.User, len(json_users))
+	for i, r := range json_users {
+		if r.User.LocationEWKB == nil {
+			r.User.LocationText = common.GeoJSONText{Data: json.RawMessage("{}")}
+		} else {
+			r.User.LocationText = common.GeoJSONText{Data: json.RawMessage(r.LocationText)}
+		}
+		users[i] = r.User
+	}
+
+	userMap := make(map[uint]models.User)
+	for _, user := range users {
+		userMap[user.ID] = user
+	}
+
+	ads := make([]models.Advertisement, len(result))
+	for i, r := range result {
+		r.Advertisement.LocationText = common.GeoJSONText{Data: json.RawMessage(r.LocationText)}
+		r.Advertisement.Subcategory.ID = r.SubcategoryID
+		r.Advertisement.Subcategory.Name = r.SubcategoryName
+		r.Advertisement.Subcategory.Category = r.CategoryName
+		ads[i] = r.Advertisement
+		ads[i].PicturesText = make([]string, len(r.Pictures))
+		copy(ads[i].PicturesText, r.Pictures)
+	}
+
+	var formattedAds []map[string]interface{}
+
+	for _, ad := range ads {
+		user, exists := userMap[ad.User_id]
+		if !exists {
+			log.Printf("User with ID %d not found", ad.User_id)
+			continue
+		}
+
+		formattedAd := map[string]interface{}{
+			"id":          ad.ID,
+			"title":       ad.Title,
+			"price":       ad.Price,
+			"description": ad.Description,
+			"subcategory": map[string]interface{}{
+				"name":     ad.Subcategory.Name,
+				"category": ad.Subcategory.Category,
+			},
+			"user":     user,
+			"datetime": ad.Datetime,
+			"pictures": ad.PicturesText,
+			"location": ad.LocationText,
+		}
+		formattedAds = append(formattedAds, formattedAd)
+	}
+
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(http.StatusOK)
+	if err := json.NewEncoder(w).Encode(formattedAds); err != nil {
+		log.Printf("Serialization error: %v", err)
+		utils.RespondWithError(w, http.StatusInternalServerError, "Internal Server Error")
+		return
+	}
+}
+
+// GetNewestAds godoc
+// @Summary Get all ads ordered by date
+// @Description Retrieves a list of all advertisements from newest to oldest
+// @Tags advertisements
+// @Accept json
+// @Produce json
+// @Success 200 {array} models.AdResponse "An array of advertisement objects"
+// @Failure 500 {object} nil "Internal Server Error"
+// @Router /ads/newest [get]
+func GetNewestAds(w http.ResponseWriter, r *http.Request) {
+	var result []ReadAd
+
+	err := models.DB.Raw(`
+	       SELECT
+	             advertisements.*,
+	             subcategories.id AS subcategory_id,
+	             subcategories.name AS subcategory_name,
+	             categories.name AS category_name,
+	             ST_AsGeoJSON(advertisements.location::geometry) AS location_text
+	       FROM advertisements
+	       JOIN subcategories ON subcategories.id = advertisements.subcategory_id
+	       JOIN categories ON categories.id = subcategories.category_id
+           ORDER BY datetime DESC
+	    `).
+		Scan(&result).Error
+
+	if err != nil {
+		log.Printf("Request error: %v", err)
+		utils.RespondWithError(w, http.StatusInternalServerError, "Internal Server Error")
+		return
+	}
+
+	type user_result struct {
+		models.User
+		LocationText string `json:"location"`
+	}
+	var json_users []user_result
+
+	err = models.DB.Raw(`
+	    SELECT *, ST_AsGeoJSON(users.location::geometry) AS location_text
+	    FROM users`).
+		Scan(&json_users).Error
+
+	if err != nil {
+		log.Printf("Request error: %v", err)
+		utils.RespondWithError(w, http.StatusInternalServerError, "Internal Server Error")
+		return
+	}
+
+	users := make([]models.User, len(json_users))
+	for i, r := range json_users {
+		if r.User.LocationEWKB == nil {
+			r.User.LocationText = common.GeoJSONText{Data: json.RawMessage("{}")}
+		} else {
+			r.User.LocationText = common.GeoJSONText{Data: json.RawMessage(r.LocationText)}
+		}
+		users[i] = r.User
+	}
+
+	userMap := make(map[uint]models.User)
+	for _, user := range users {
+		userMap[user.ID] = user
+	}
+
+	ads := make([]models.Advertisement, len(result))
+	for i, r := range result {
+		r.Advertisement.LocationText = common.GeoJSONText{Data: json.RawMessage(r.LocationText)}
+		r.Advertisement.Subcategory.ID = r.SubcategoryID
+		r.Advertisement.Subcategory.Name = r.SubcategoryName
+		r.Advertisement.Subcategory.Category = r.CategoryName
+		ads[i] = r.Advertisement
+		ads[i].PicturesText = make([]string, len(r.Pictures))
+		copy(ads[i].PicturesText, r.Pictures)
+	}
+
+	var formattedAds []map[string]interface{}
+
+	for _, ad := range ads {
+		user, exists := userMap[ad.User_id]
+		if !exists {
+			log.Printf("User with ID %d not found", ad.User_id)
+			continue
+		}
+
+		formattedAd := map[string]interface{}{
+			"id":          ad.ID,
+			"title":       ad.Title,
+			"price":       ad.Price,
+			"description": ad.Description,
+			"subcategory": map[string]interface{}{
+				"name":     ad.Subcategory.Name,
+				"category": ad.Subcategory.Category,
+			},
+			"user":     user,
+			"datetime": ad.Datetime,
+			"pictures": ad.PicturesText,
+			"location": ad.LocationText,
+		}
+		formattedAds = append(formattedAds, formattedAd)
+	}
+
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(http.StatusOK)
+	if err := json.NewEncoder(w).Encode(formattedAds); err != nil {
+		log.Printf("Serialization error: %v", err)
+		utils.RespondWithError(w, http.StatusInternalServerError, "Internal Server Error")
+		return
+	}
+}
+
+// GetClosestAds godoc
+// @Summary Get all ads ordered by distance
+// @Description Retrieves a list of all advertisements from near to far
+// @Tags advertisements
+// @Accept json
+// @Produce json
+// @Param id path int true "Ad ID"
+// @Success 200 {array} models.AdResponse "An array of advertisement objects"
+// @Failure 500 {object} nil "Internal Server Error"
+// @Router /ads/{id}/nearest [get]
+func GetNearestAds(w http.ResponseWriter, r *http.Request) {
+	vars := mux.Vars(r)
+	id := vars["id"]
+
+	var result []ReadAd
+
+	err := models.DB.Raw(`
+       SELECT
+           a.*,
+           subcategories.id AS subcategory_id,
+           subcategories.name AS subcategory_name,
+           categories.name AS category_name,
+           ST_AsGeoJSON(a.location::geometry) AS location_text,
+           ST_Distance(
+              a.location,
+              (SELECT ST_SetSRID(ST_GeomFromEWKB(location), 4326) FROM advertisements WHERE id = ?)
+           ) as distance
+      FROM advertisements a
+      JOIN subcategories ON subcategories.id = a.subcategory_id
+      JOIN categories ON categories.id = subcategories.category_id
+      ORDER BY distance ASC
+	    `, id).
 		Scan(&result).Error
 
 	if err != nil {
@@ -150,14 +380,7 @@ func GetAd(w http.ResponseWriter, r *http.Request) {
 	vars := mux.Vars(r)
 	id := vars["id"]
 
-	var result struct {
-		models.Advertisement
-		SubcategoryID   uint           `json:"subcategory_id"`
-		SubcategoryName string         `json:"subcategory_name"`
-		CategoryName    string         `json:"category_name"`
-		LocationText    string         `json:"location"`
-		Pictures        pq.StringArray `gorm:"column:pictures" json:"pictures"`
-	}
+	var result ReadAd
 
 	err := models.DB.Raw(`
 	       SELECT
